button alignment fixes

--- a/client/app/main/partials/submit.scss
+++ b/client/app/main/partials/submit.scss
@@ -122,7 +122,7 @@
   height: 160px;
   width: 100%;
 //  background-color:$my-dark-orange;
-  background-image: url(../assets/images/creatives-desk.jpg);
+  background-image: url('../assets/images/creatives-desk.jpg');
   background-size: cover;
   background-position-y: 100px;
 }
